--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-wheel==0.38.4
-asgiref==3.6.0
-Django==4.1.6
+asgiref==3.4.1
+Django==3.2.17
 gunicorn==20.1.0
 mysqlclient==2.1.1
 python-decouple==3.7
+pytz==2022.7.1
 sqlparse==0.4.3
+typing_extensions==4.1.1
+uWSGI==2.0.21
