--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ gunicorn==20.1.0
 mysqlclient==2.1.1
 python-decouple==3.7
 pytz==2022.7.1
+selenium==3.141.0
 sqlparse==0.4.3
 typing_extensions==4.1.1
+urllib3==1.26.15
 uWSGI==2.0.21
